# tooner

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  TESTING.md  docker-compose.yml  install.sh  pyproject.toml
.tests/: tests-prompts.txt
hooks/: compress_prompt.py  compress_prompt_standalone.py
src/tooner/: __init__.py  server.py
tests/: __init__.py  test_server.py
